still building out invoice data entry form

--- a/app/public/assets/styles.css
+++ b/app/public/assets/styles.css
@@ -2,6 +2,14 @@
   border: 1px solid blue;
 }
 
+/* INVOICE DATA ENTRY STYLING */
+input:invalid {
+  border: 2px dashed red;
+}
+
+input:valid {
+  border: 1px solid black;
+}
 
 /* INVOICE TABLE STYLING */
 
