--- a/app/public/assets/styles.css
+++ b/app/public/assets/styles.css
@@ -1,17 +1,104 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 .box {
   border: 1px solid blue;
 }
 
-/* INVOICE DATA ENTRY STYLING */
+h1 {
+  font-weight: 800;
+}
+
+h5 {
+  font-size: 15px;
+  font-weight: 400;
+  margin: 5px;
+}
+
+/* ----------- PARENT APP STYLING ----------- */
+
+/* ----------- INVOICE SUMMARY STYLING ----------- */
+.invoicesummary {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 12px;
+  font-weight: 300;
+}
+/* ----------- INVOICE DATA ENTRY STYLING ----------- */
+input {
+  border-radius: 2px;
+  color: gray;
+  margin-left: 5px;
+  font-size: 10px;
+}
+
 input:invalid {
   border: 1px solid red;
 }
 
 input:valid {
-  border: 1px solid black;
+  border: 1px solid gray;
 }
 
-/* INVOICE TABLE STYLING */
+label {
+  font-size: 10px;
+  margin-left: 5px;
+}
+
+.submit-btn {
+  margin-left: 100px;
+}
+
+form {
+  margin: 10px;
+}
+
+/* ----------- INVOICE LIST STYLING ----------- */
 
 table {
   width: 100%
@@ -20,12 +107,17 @@ table {
 th {
   font-size: 8px;
   color: blue;
+  border-bottom: 1px solid blue;
+  vertical-align: bottom;
 }
 
 tr {
   font-size: 8px;
+  color: gray;
+  height: 20px;
 }
 
 td {
-  border: 1px solid blue;
+  text-align: center;
+  vertical-align: middle;
 }
