invoice manager can accept and render invoices. does not deal with retrieval and update of existing invoices.

--- a/app/public/assets/styles.css
+++ b/app/public/assets/styles.css
@@ -78,6 +78,13 @@ input {
   font-size: 10px;
 }
 
+button {
+  border: none;
+  font-size: 6px;
+  margin-left: 10px;
+  vertical-align: middle
+}
+
 input:invalid {
   border: 1px solid red;
 }
